--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,25 @@ body {
     font-size: 20px;
 }
 
+.album-btn-text {
+    font-size: 16px;
+}
+
+.to-top {
+    display: flex;
+    justify-content: center;
+}
+
 .webbed {
     background-color: #393E46;
     border: 0px;
     border-radius: 50%;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
 }
