--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@ body {
 
 .page-container {
     background-color: #fff6e7;
-    border: 3px solid;
-    box-shadow: 5px 5px;
+    border: 5px solid #393E46;
+    box-shadow: 10px 10px;
     border-radius: 20px;
     margin: 50px;
     margin-top: 60px;
@@ -43,6 +43,8 @@ body {
 
 .emphasize-about {
     font-weight: 700;
+    color: #00ADB5;
+    text-shadow: 1px 1px #393E46;
 }
 
 .lead {
@@ -68,10 +70,75 @@ body {
     border-radius: 50%;
 }
 
+.card-img-top {
+    object-fit: fill;
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+
+.contact-message {
+    width: 100%;
+    height: 150px;
+}
+
+.contact-btn{
+    font-size: large;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.shown {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 1s;
+}
+
+.col:nth-child(1){
+    transition-delay: 200ms;
+}
+
+.col:nth-child(2){
+    transition-delay: 500ms;
+}
+
+.col:nth-child(3){
+    transition-delay: 800ms;
+}
+
+.col:nth-child(4){
+    transition-delay: 1100ms;
+}
+
+.col:nth-child(5){
+    transition-delay: 200ms;
+}
+
+.col:nth-child(6){
+    transition-delay: 500ms;
+}
+
+.col:nth-child(7){
+    transition-delay: 800ms;
+}
+
+.col:nth-child(8){
+    transition-delay: 1100ms;
+}
+
+@media(prefers-reduced-motion){
+    .hidden-section {
+        transition: none;
+    }
 }
