--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Cinzel:wght@400..900&display=swap');
 
-body {
-    background-color: #00ADB5;
-}
-
 .page-container {
     background-color: #fff6e7;
     border: 5px solid #393E46;
@@ -35,7 +31,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-  }
+}
 
 .xl-text {
     font-size: x-large;
@@ -75,11 +71,11 @@ body {
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
 }
 
 .contact-message {
@@ -87,7 +83,7 @@ body {
     height: 150px;
 }
 
-.contact-btn{
+.contact-btn {
     font-size: large;
 }
 
@@ -105,40 +101,60 @@ body {
     transition: all 1s;
 }
 
-.col:nth-child(1){
+.col:nth-child(1) {
     transition-delay: 200ms;
 }
 
-.col:nth-child(2){
+.col:nth-child(2) {
     transition-delay: 400ms;
 }
 
-.col:nth-child(3){
+.col:nth-child(3) {
     transition-delay: 600ms;
 }
 
-.col:nth-child(4){
+.col:nth-child(4) {
     transition-delay: 800ms;
 }
 
-.col:nth-child(5){
+.col:nth-child(5) {
     transition-delay: 200ms;
 }
 
-.col:nth-child(6){
+.col:nth-child(6) {
     transition-delay: 400ms;
 }
 
-.col:nth-child(7){
+.col:nth-child(7) {
     transition-delay: 600ms;
 }
 
-.col:nth-child(8){
+.col:nth-child(8) {
     transition-delay: 800ms;
 }
 
-@media(prefers-reduced-motion){
+@media(prefers-reduced-motion) {
     .hidden-section {
         transition: none;
+    }
+}
+
+.gradient-background {
+    background: linear-gradient(300deg, #EEEEEE, #393E46, #00ADB5);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
     }
 }
